--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "backend-project",
   "version": "1.0.0",
   "description": "Das Ziel dieses Projekts besteht darin, eine Liste zu erstellen, die ein Element akzeptiert und lokal speichert.  Wenn der Benutzer versucht, ein leeres Element einzugeben, gibt das Programm eine Warnung aus.   Wenn der Benutzer ein Element erfolgreich eingibt, zeigt ihm das Programm außerdem eine wichtige Nachricht an.",
-  "main": "app.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,7 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^7.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
